--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,12 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
+        android:name=".application.AirlineTicketApp"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AirlineTicketApp"
-        tools:targetApi="31">
+        android:theme="@style/Theme.AirlineTicketApp">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
