--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,20 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'com.google.dagger.hilt.android' version "2.43.2" apply false
+}
+
+ext {
+    core_version = "1.9.0"
+    constraintlayout_version = "2.1.4"
+    material_version = "1.6.1"
+    appcompat_version = "1.5.1"
+    dagger_version = "2.43.2"
+    lifecycle_version = "2.5.1"
+    lifecycle_ext_version = "2.2.0"
+
+    espresso_version = "3.4.0"
+    junit_version = "4.13.2"
+    ext_junit_version = "1.1.3"
 }
