--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
 
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.2"
 
+    implementation 'com.google.code.gson:gson:2.9.1'
+
+
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
