--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,11 @@ ext {
     dagger_version = "2.43.2"
     lifecycle_version = "2.5.1"
     lifecycle_ext_version = "2.2.0"
+    retrofit_version = "2.9.0"
+    gson_version = "2.9.1"
+    okhttp_version = "4.10.0"
+    fragment_version = "2.5.2"
+    glide_version = "4.13.2"
 
     espresso_version = "3.4.0"
     junit_version = "4.13.2"
